# todo

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  test_lock.db.wal
docs/: 01-project-setup.md  02-data-models.md  03-database-layer.md  04-ai-enrichment.md  05-cli-interface.md  06-gamification.md  07-testing-strategy.md  08-quality-assurance.md  09-opentelemetry-observability-plan.md  ROADMAP.md
src/todo/: models.py
src/todo/ai/: __init__.py  background.py  enrichment.py  enrichment_service.py  event_parser.py  learning.py  providers.py
src/todo/cli/: __init__.py  main.py
src/todo/core/: achievements.py  analytics.py  config.py  dates.py  goals.py  scoring.py
src/todo/db/: __init__.py  connection.py  migrations.py  repository.py  schema.sql
src/todo/gcal/: __init__.py  client.py
tests/: test_achievements.py  test_ai.py  test_analytics.py  test_basic.py  test_cli.py  test_cli_dashboard.py  test_cli_multiple_completion.py  test_cli_runtime.py  test_database.py  test_dates.py  test_db_components.py  test_events.py  test_gcal.py  test_goals.py  test_models.py  test_repository.py  test_scoring.py
tests/e2e/: README.md  __init__.py  test_achievement_cli_e2e.py  test_comprehensive_cli_e2e.py  test_extended_coverage_e2e.py  test_simple_e2e.py  test_working_e2e.py
